test/sematest/invalid/redefinition_of_system.java
class Foo {
    public int System;
    public static void main(String[] main) {
        int x = 1;
        System.out.println(x);
    }
}
